made overflow x hidden in examples to prevent scrolling

--- a/source/stylesheets/_custom_styling.scss
+++ b/source/stylesheets/_custom_styling.scss
@@ -74,6 +74,7 @@ blockquote.example-description {
 .content pre {
 	padding: 14px 42px;
     text-overflow: ellipsis;
+    overflow-x: hidden;
 }
 
 blockquote.example-description {
